--- a/cisla.html
+++ b/cisla.html
@@ -6,22 +6,17 @@
         function novecislo(){
             let maximum = document.getElementById("max").value;
             let minimum = document.getElementById("min").value;
-            fetch("http://localhost:88/gencisla?max="+maximum+"&min="+minimum).then(function(response) {
-                response.text().then(function(text) {
-                    let obj = JSON.parse(text);
-                    document.getElementById("cislo").innerHTML = obj.cislo;
-                })
+            fetch("http://localhost:88/gencisla/nove?max="+maximum+"&min="+minimum).then(function(response) {
+                response.text().then(function(text) {})
             })
         }
         function kontrola(){
             let guess = document.getElementById("guess").value;
-            let cislo = document.getElementById("cislo").value;
-            fetch("http://localhost:88/kontcisla?guess="+guess+"&cislo="+cislo).then(function(response) {
+            fetch("http://localhost:88/gencisla/kontrola?guess="+guess).then(function(response) {
                 response.text().then(function(text) {
                     let obj = JSON.parse(text);
-                    if (obj.vys === 1){document.getElementById("vysledek").innerHTML = "Moc vysoké"}
-                    if (obj.vys === 2){document.getElementById("vysledek").innerHTML = "Moc nízké"}
-                    if (obj.vys === 3){document.getElementById("vysledek").innerHTML = "SPRÁVNĚ"}
+                    document.getElementById("vysledek").innerHTML = obj.vys
+                    document.getElementById("odpovedi").innerHTML = obj.odp
                 })
             })
         }
@@ -31,10 +26,10 @@
 <h1>Hádání čísla</h1>
 Minimální: <input type="text" id="min">
 Maximální: <input type="text" id="max">
-<input type="button" value="Nové číslo" onClick="novecislo()">
-<span id="cislo"></span><br>
+<input type="button" value="Nové číslo" onClick="novecislo()"><br>
 Odhad: <input type="number" id="guess">
 <input type="button" value="Zkontrolovat" onClick="kontrola()">
-<span id="vysledek"></span>
+<span id="vysledek"></span><br>
+<span id="odpovedi"></span>
 </body>
 </html>
